feat: expose user club roles